# py_addrmap

./: LICENSE  README.md  pyproject.toml
examples/: berlin_addresses.xlsx
examples/berlin_out/: enriched_addresses.xlsx  map.html  map_Charlottenburg.html  map_Kreuzberg.html  map_Mitte.html  map_Prenzlauer Berg.html  map_Wedding.html
src/addrmap/: geocoding.py  main.py  mapping.py
tests/: test_mapping.py
